Add host-paths config with explicit ambiguity detection
Introduces host-paths as a list alternative to host-path, allowing
multiple base directories for repository resolution. When a repo exists
in multiple host-paths, the operation fails with a clear error message
instructing the user to add an explicit repo-paths entry.

- host-path remains supported for backwards compatibility
- Validation error if both host-path and host-paths are specified
- GitRemoteUtils throws IllegalStateException on ambiguous matches
- AutoRemoteService scans all configured directories
- Documentation updated to recommend host-paths as primary option
- Added test coverage for ambiguous resolution scenario

Assisted-By: Claude Code <noreply@anthropic.com>